// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sync locize update local message from locize 1`] = `
Array [
  Object {
    "defaultMessage": "Hello {name}, you have {unreadCount, number} {unreadCount, plural, one {message} other {messages}}",
    "description": "Welcome message",
    "files": Array [
      "src/App.js",
    ],
    "id": "welcome",
    "message": "Hello!",
  },
]
`;

exports[`sync locize update local message from locize: file/en.json 1`] = `
Array [
  Object {
    "defaultMessage": "Hello {name}, you have {unreadCount, number} {unreadCount, plural, one {message} other {messages}}",
    "description": "Welcome message",
    "files": Array [
      "src/App.js",
    ],
    "id": "welcome",
    "message": "Hello!",
  },
]
`;

exports[`sync locize upload new message to locize 1`] = `
Object {
  "welcome": Object {
    "context": Object {
      "text": "Welcome message",
    },
    "value": "Hello {name}, you have {unreadCount, number} {unreadCount, plural, one {message} other {messages}}",
  },
}
`;

exports[`sync locize upload new message to locize: en 1`] = `
Object {
  "welcome": Object {
    "context": Object {
      "text": "Welcome message",
    },
    "value": "Hello {name}, you have {unreadCount, number} {unreadCount, plural, one {message} other {messages}}",
  },
}
`;

exports[`sync locize upload new message to locize: ru 1`] = `
Object {
  "welcome": Object {
    "context": Object {
      "text": "Welcome message",
    },
    "value": "Привет!",
  },
}
`;

exports[`sync lokalise update existing message lokalise 1`] = `
Array [
  Object {
    "defaultMessage": "Hello {name}, you have {unreadCount, number} {unreadCount, plural, one {message} other {messages}}",
    "description": "Welcome message",
    "files": Array [
      "src/App.js",
    ],
    "id": "welcome",
    "message": "Hello!",
  },
]
`;

exports[`sync lokalise upload new message to lokalise 1`] = `
Object {
  "keys": Array [
    Object {
      "description": "Welcome message",
      "key_name": "welcome",
      "platforms": Array [
        "ios",
        "android",
        "web",
        "other",
      ],
      "translations": Array [
        Object {
          "language_iso": "en",
          "translation": "Hello {name}, you have {unreadCount, number} {unreadCount, plural, one {message} other {messages}}",
        },
      ],
    },
  ],
}
`;
